# long-horizon-tracking

./: .gitignore  LICENSE  README.md  TASK2_ALIGNMENT_REPORT.md  TASK34_FILTER_SAMPLING_REPORT.md  pyproject.toml  requirements.txt  sam3_video_segmentation.ipynb
data/aligned_segments/: aligned_candidates.json
data/candidate_objects/: candidate_segments.json
data/events/: chekhov_candidates.json  run1.json  scene_climax.json  scene_inventory.json
docs/: task1_pipeline_spec.md
scripts/: align_script_video.py  deliberate_resample_object.py  filter_candidate_segments.py  inspect_events.py  mine_chekhov_candidates.py  mine_climax_llm.py  mine_events.py  mine_scene_inventory.py  mine_stage1_llm.py  refine_explicit_window.py  sample_candidate_frames.py
scripts/archive/: legacy_events_tool.py
scripts/pipeline/: align_script_video.py  filter_candidate_segments.py  mine_chekhov_candidates.py  mine_climax_llm.py  mine_scene_inventory.py  mine_stage1_llm.py  sample_candidate_frames.py
scripts/refine/: refine_windows.py
src/tracking_project/io/: jsonio.py  pdf_scene_parser.py  subtitles.py
src/tracking_project/llm/: curator_openai.py  prompts.py  prompts_scene.py  scene_extractor_openai.py
src/tracking_project/pipeline/: candidate_segments.py  chekhov_candidates.py  climax_mine.py  deliberate_resampling.py  frame_sampling.py  (+4 more)
tests/: test_candidate_segments.py  test_chekhov_candidates.py  test_deliberate_resampling.py  test_frame_sampling.py  test_scene_inventory.py  test_scene_parser.py  test_scene_parser_hp2_pdf.py  test_subtitles.py  test_video_alignment.py
(+4 files in other folders)
