[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tracking-project"
version = "0.0.1"
description = "Narrative-to-video object candidate mining, alignment, and refinement pipeline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "pdfplumber==0.11.9",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]
video = [
    "opencv-python-headless>=4.10",
]
legacy = [
    "spacy>=3.8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
